# sinjapan-worknow-ver1

./: .env.production.template  .gitignore  .replit  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--0-20000-Nov-09-14-30-51-srv1087935-systemd-1-worknow-frontend-service-Deactivated-successfully--1762698727135_1762698727135.txt  Pasted--15-sleep-15-pm2-logs-sinjapan-manager-lines-30-PM2-Applying-action-restartProcessI-1762575706483_1762575706484.txt  Pasted--CFG-get-settings-model-dump-rw-1-www-data-www-data-1462-Nov-9-14-28-var-www-workno-1762701625757_1762701625757.txt  Pasted--Loaded-loaded-etc-systemd-system-worknow-backend-service-enabled-pres-Active-active-1762698307329_1762698307329.txt  Pasted--Loaded-loaded-usr-lib-systemd-system-nginx-service-enabled-preset-enabled-Active-a-1762698441862_1762698441862.txt  Pasted--URL-https-sinjapan-worknow-com-Email-info-sinjapan-jp-Password-Kazuya800-1762702404321_1762702404322.txt  Pasted-CREATE-DATABASE-worknow-production-SQL-2-VPS-Mac-cd-Desktop-dist--1762701130650_1762701130650.txt  Pasted-END-LANGUAGE-plpgsql-DROP-TRIGGER-IF-EXISTS-set-updated-at-users-ON-users-C-1762701369334_1762701369335.txt  Pasted-Last-login-Sun-Nov-9-23-01-55-on-ttys070-kazuyaotani-Mac-ssh-root-212-85-24-206-root-212-85-24-1762697733235_1762697733235.txt  Pasted-Last-login-Sun-Nov-9-23-01-55-on-ttys070-kazuyaotani-Mac-ssh-root-212-85-24-206-root-212-85-24-1762700462415_1762700462417.txt  Pasted-sh-export-not-a-valid-identifier-bash-export-n-1762698478135_1762698478135.txt  (+11 more)
(+198 files in other folders)
